2010-02-17  Romain Francois <romain@r-enthusiasts.com>

	* added support for as<Mat<T>> as<Row<T>> and as<Col<T>> 
	with T in : int, double, float, unsigned int
	
	* added untested support for wrap( Cube<T> )
	
2010-02-16  Romain Francois <romain@r-enthusiasts.com>

	* initial version, covering wrap(Mat), wrap(Col), wrap(Row)